src/test/deca/context/valid/personalTests/plus1.deca
{
    int a = 1;
    float b = 1.0;

    a = a + 1;
    b = b + 1.0;

    println(a);
    println(b);
}