src/test/deca/context/invalid/personalTests/float_depassement.deca
{
    float a = 10000000000000000000000000000000000000000000000000000000000000000.0;
}